improve container image build

--- a/exporter-go/Dockerfile
+++ b/exporter-go/Dockerfile
@@ -1,7 +1,7 @@
 FROM golang:1.16 as build
 WORKDIR /app
 COPY . .
-RUN GOOS=linux GOARCH=amd64 go build .
+RUN GOOS=linux CGO_ENABLED=0 GOARCH=amd64 go build .
 # Now copy it into our base image.
 FROM gcr.io/distroless/static
 COPY --from=build /app/opa_scorecard_exporter /app/opa_scorecard_exporter
