--- a/kube-prometheus-stack/cm-custom-dashboard.yaml
+++ b/kube-prometheus-stack/cm-custom-dashboard.yaml
@@ -23,7 +23,7 @@ data:
       "editable": true,
       "gnetId": null,
       "graphTooltip": 0,
-      "iteration": 1623664009501,
+      "iteration": 1623665241994,
       "links": [],
       "panels": [
         {
@@ -271,7 +271,7 @@ data:
           "targets": [
             {
               "exemplar": true,
-              "expr": "sum by (kind) (opa_scorecard_constraint_violations)",
+              "expr": "sum by (kind) (opa_scorecard_constraint_violations{violating_namespace=\"$namespace\"})",
               "format": "time_series",
               "interval": "",
               "legendFormat": "{{kind}}",
@@ -375,7 +375,6 @@ data:
           {
             "allValue": null,
             "current": {
-              "isNone": true,
               "selected": false,
               "text": "None",
               "value": ""
@@ -406,7 +405,7 @@ data:
           {
             "allValue": null,
             "current": {
-              "selected": false,
+              "selected": true,
               "text": "prometheus",
               "value": "prometheus"
             },
