fixed service resource by adding required namespace

--- a/exporter-k8s-resources/service.yaml
+++ b/exporter-k8s-resources/service.yaml
@@ -5,6 +5,7 @@ metadata:
   labels:
     app: opa-exporter
   name: opa-exporter
+  namespace: opa-exporter
   annotations:
     prometheus.io/scrape-slow: "true"
 spec:
