--- a/exporter-k8s-resources/service.yaml
+++ b/exporter-k8s-resources/service.yaml
@@ -5,7 +5,8 @@ metadata:
   labels:
     app: opa-exporter
   name: opa-exporter
-  namespace: opa-exporter
+  # namespace: opa-exporter
+  namespace: gatekeeper-system
   annotations:
     prometheus.io/scrape-slow: "true"
 spec:
