--- a/exporter-k8s-resources/clusterrolebinding.yaml
+++ b/exporter-k8s-resources/clusterrolebinding.yaml
@@ -9,4 +9,5 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: default
-  namespace: opa-exporter
+  # namespace: opa-exporter
+  namespace: gatekeeper-system
