hardening security to meet Gatekeeper policies & adding resource limits

--- a/exporter-k8s-resources/clusterrolebinding.yaml
+++ b/exporter-k8s-resources/clusterrolebinding.yaml
@@ -9,5 +9,4 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: default
-  # namespace: opa-exporter
-  namespace: gatekeeper-system
+  namespace: opa-exporter
